update game with mels suggestions

--- a/guessGame.html
+++ b/guessGame.html
@@ -10,21 +10,16 @@
   
   else {
 
-    Number(initialGuess);
-
     while(isNaN(initialGuess) || initialGuess === "" || initialGuess > 5) {
       alert("You can only guess a number between 0 and 5! Please guess again!");
       initialGuess = prompt("If you have 5 guesses, how many times can you correctly guess a random number between 1 and 5?");
-      Number(initialGuess);
     }
-
     var counter = 0,
         exit = false;
-
     for (i = 0; i < 5; i++) {
       var guess = prompt("Guess a number!");
       if (guess === "q") {
-        i = 6; 
+        break; 
         alert("Goodbye!");
         exit = true;
       }
@@ -35,22 +30,19 @@
           guess = prompt("Guess a number!");
           Number(guess);
         }
-
         var answer = Math.floor(Math.random() * 5 + 1);
         var message;
 
-        if (guess == answer) {
+        if (guess === answer) {
           message = "Nice! You guessed correctly!";
           counter++;
         }
         else {
           message = "Wrong! You guessed incorrectly! The answer was " + answer + "! Too bad, so sad...";
         }
-
         alert(message);
       }   
     }    
-
     if (exit) {
       alert("Sorry you're a quitter.");
     }
@@ -59,7 +51,7 @@
         alert("Congratulations! You correctly guessed that that you would guess correctly " + counter + " out of five times! And that statement totally doesn't sound confusing at all.");
       }
       else {
-      alert("What a shame! You guessed correctly " + counter + " out of five times, but you predicted you'd guess correctly " + initialGuess + " out of five times. Oh, the Calamity!");
+        alert("What a shame! You guessed correctly " + counter + " out of five times, but you predicted you'd guess correctly " + initialGuess + " out of five times. Oh, the Calamity!");
       }
     }
   }
